--- a/pyproject.toml
+++ b/pyproject.toml
@@ -7,6 +7,7 @@ requires-python = ">=3.11"
 dependencies = [
     "extruct>=0.18.0",
     "httpx>=0.28.1",
+    "jinja2>=3.1.6",
     "lxml>=6.0.1",
     "pydantic>=2.11.9",
     "python-dotenv>=1.1.1",
