--- a/pyproject.toml
+++ b/pyproject.toml
@@ -6,6 +6,7 @@ readme = "README.md"
 requires-python = ">=3.11"
 dependencies = [
     "extruct>=0.18.0",
+    "google-generativeai>=0.8.5",
     "httpx>=0.28.1",
     "jinja2>=3.1.6",
     "lxml>=6.0.1",
